--- a/designy/src/components/CompanyCR/companycr.css
+++ b/designy/src/components/CompanyCR/companycr.css
@@ -13,13 +13,18 @@
 }
 .cr-title{
     font-family: monospace;
-    font-size: 4rem;    
+    font-size: 2rem;    
     font-weight: 100;
-    padding: 2rem;
+    padding-bottom: 1rem;
 
 
 }
 .cr-paragraphs{
     font-size: 1rem;
     letter-spacing: .125rem;
+}
+@media screen and (max-width: 789px){
+    .cr-container{
+        padding-top: 80vh;
+    }
 }
