--- a/designy/src/components/Hero/hero.css
+++ b/designy/src/components/Hero/hero.css
@@ -42,10 +42,11 @@
   border-radius: 99px;
   font-weight: 600;
   font-size: 1.5rem;
-  background-color: #000;
+  background-color: rgba(0, 255, 8, 0.275);
   color: #43fc4c;
-  border: 5px solid linear-gradient(80deg, rgba(255,255,255,0.4514180672268907) 5%, rgba(202,202,202,1) 20%, rgba(142,142,142,1) 71%, rgb(222, 222, 222) 100%);
-  box-shadow: #37ff0080 1px 1px 25px 6px;
+ /* border: 5px solid linear-gradient(80deg, rgba(255,255,255,0.4514180672268907) 5%, rgba(202,202,202,1) 20%, rgba(142,142,142,1) 71%, rgb(222, 222, 222) 100%);*/
+ border: none;
+ /* box-shadow: #ffffff80 1px 1px 15px 1px;*/
   transition: .5s;
 }
 .hero-cta:hover{
@@ -88,7 +89,7 @@
     display:flex;
     order: 1;
     width: 100%;
-    height: 100vh;
+    height: 40vh;
     
   }
   .hero-right{
