--- a/designy/src/pages/OrderCompleted/order.css
+++ b/designy/src/pages/OrderCompleted/order.css
@@ -85,11 +85,13 @@
 
 .order-info li {
   margin-bottom: 0.5rem;
-  color: #666;
+  color: #f9f9f9;
 }
 
-.return-button {
-  text-align: center;
+.page-return-button {
+  position: absolute;
+  right: 3.5vw;
+  top: 15vh;
 }
 
 .return-button-style {
@@ -114,6 +116,10 @@
     padding: 1rem;
   }
 
+  .page-return-button{
+    top: 20vh;
+    right: 10vw;
+  }
   .order-item {
     flex-direction: column;
     align-items: center;
